Fix missing background image and bg color

--- a/css/default.css
+++ b/css/default.css
@@ -27,11 +27,11 @@ body {
   height: 100vh;
   font-family: var(--font-body);
   font-weight: 500;
-  background-color: hsl(226, 95%, 92%); /* Placeholder color */
+  background-color: var(--color-primary-pale-blue);
   background-image: url(../images/pattern-background-mobile.svg);
-  background-position: center;
+  background-position: center top;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   margin: 0;
   padding: 1.5rem;
 }
@@ -133,6 +133,9 @@ button[type=submit]:hover {
 }
 
 @media (min-width: 576px) {
+  body {
+    background-image: url(../images/pattern-background-desktop.svg);
+  }
   .card-body {
     gap: 1rem;
     padding: 3rem 3rem 2rem 3rem;
